[package]
name = "viuer"
version = "0.9.2"
authors = ["Atanas Yankov <atanas.yankov98@gmail.com>"]
edition = "2021"
description = "Display images in the terminal"
documentation = "https://docs.rs/viuer"
readme = "README.md"
repository = "https://github.com/atanunq/viuer"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["terminal", "image"]
exclude = [".github"]

[dependencies]
ansi_colours = "1"
base64 = "0.22"
console = { version = "0.15", default-features = false }
crossterm = { version = "0.28", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
lazy_static = "1.5"
tempfile = "3"
termcolor = "1"
sixel-rs = { version = "0.3", optional = true}

[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.28", default-features = false, features = ["windows"]}

[features]
default = []
sixel = ["sixel-rs"]
print-file = ["image/default-formats"] # Hide file printing behind a flag because it adds heavy dependencies.


[package.metadata.docs.rs]
# Show all methods in the documentation, even the non-default ones.
all-features = true
