[package]
name = "viuer"
version = "0.9.2"
authors = ["Atanas Yankov <atanas.yankov98@gmail.com>"]
edition = "2021"
description = "Display images in the terminal"
documentation = "https://docs.rs/viuer"
readme = "README.md"
repository = "https://github.com/atanunq/viuer"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["terminal", "image"]
exclude = [".github"]
rust-version = "1.80"

[dependencies]
ansi_colours = "1"
base64 = "0.22"
console = { version = "0.15", default-features = false }
crossterm = { version = "0.29", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
termcolor = "1"
icy_sixel = { version = "0.1", optional = true }
sixel-rs = { version = "0.5", optional = true}

[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.29", default-features = false, features = ["windows"]}

[features]
default = []
sixel = ["sixel-rs"]
icy_sixel = ["dep:icy_sixel"]
print-file = ["image/default-formats"] # Hide file printing behind a flag because it adds heavy dependencies.

[package.metadata.docs.rs]
# Show all methods in the documentation, even the non-default ones.
all-features = true
